--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "l2",
   "version": "1.0.0",
-  "description": "",
+  "description": "The Expense Tracker Module is a tool to help users manage their expenses, budgets.",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "vite"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
+    "lint": "npx eslint ./src || exit 0",
+    "lint:fix": "npx eslint ./src --fix || exit 0"
   },
   "repository": {
     "type": "git",
