--- a/package.json
+++ b/package.json
@@ -2,24 +2,29 @@
   "name": "l2",
   "version": "1.0.0",
   "description": "The Expense Tracker Module is a tool to help users manage their expenses, budgets.",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview",
+    "start": "node src/app.js",
     "lint": "npx eslint ./src || exit 0",
-    "lint:fix": "npx eslint ./src --fix || exit 0"
+    "lint:fix": "npx eslint ./src --fix || exit 0",
+    "test": "npx --node-options=--experimental-vm-modules jest || exit 0"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MazenDerbas/L2.git"
   },
-  "author": "",
+  "author": "Mazen Derbas",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/MazenDerbas/L2/issues"
   },
-  "homepage": "https://github.com/MazenDerbas/L2#readme"
+  "homepage": "https://github.com/MazenDerbas/L2#readme",
+  "devDependencies": {
+    "eslint-config": "^1.1.6",
+    "jest": "^29.7.0"
+  },
+  "jest": {
+    "testEnvironment": "node"
+  }
 }
