--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/app.js",
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
     "lint": "npx eslint ./src || exit 0",
     "lint:fix": "npx eslint ./src --fix || exit 0",
     "test": "npx --node-options=--experimental-vm-modules jest || exit 0"
@@ -15,14 +17,16 @@
     "url": "git+https://github.com/MazenDerbas/L2.git"
   },
   "author": "Mazen Derbas",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/MazenDerbas/L2/issues"
   },
   "homepage": "https://github.com/MazenDerbas/L2#readme",
   "devDependencies": {
-    "eslint-config": "^1.1.6",
-    "jest": "^29.7.0"
+    "@lnu/eslint-config": "^1.1.7",
+    "eslint-config": "^0.3.0",
+    "jest": "^29.7.0",
+    "vite": "^3.1.8"
   },
   "jest": {
     "testEnvironment": "node"
